Fix /myClubs route

--- a/views/clubs.ejs
+++ b/views/clubs.ejs
@@ -18,7 +18,7 @@
         <div>
           <h2><%= myClubs[i].name %></h2>
           <p><%= myClubs[i].description %></p>
-          <button><a href="/myClubs/<%= myClubs[i]._id %>">View Club</a></button>
+          <button><a href="/clubs/myClubs/<%= myClubs[i]._id %>">View Club</a></button>
         </div>
       <%}%>
       
@@ -34,4 +34,4 @@
     </section>
   </section>
 </body>
-</html>
+</html> 
